--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,35 @@
 body {
     font-family: sans-serif;
-    margin: 20px;
     background-color: #fdfdfd;
+}
+
+header {
+  background-color: rgb(48, 169, 180, 0.8);
+  padding: 1rem 2rem;
+  width: 100%;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.headerlogo a {
+  text-decoration: none;
+  color: rgb(192, 221, 223);
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+  font-size: 1.5rem;
+  gap: 10px;
+}
+
+.headerlogo i {
+  color: rgb(192, 221, 223);
+  opacity: 0.7;
+  font-size: 2rem;
+}
+
+.headerlogo a:hover {
+  opacity: 1;
 }
 
 .book {
@@ -16,7 +44,7 @@ form {
 
 #review-form {
     max-width: 600px;
-    margin: 2rem auto;
+    margin: 5rem auto 2rem;
     padding: 1.5rem;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -105,6 +133,7 @@ form {
   
 #reviews div {
     border-top: 1px solid #ccc;
+    margin: 20px;
     margin-top: 10px;
     padding-top: 10px;
 }
